--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "workbench.colorCustomizations": {
+        "git.enabled": true,
+        "git.path": "/usr/local/bin/git",
         "activityBar.background": "#0F3141",
         "titleBar.activeBackground": "#15455B",
         "titleBar.activeForeground": "#F6FBFD"
